# k4dirstat

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  CREDITS  ChangeLog  KNOWN_BUGS  Makefile.am  Makefile.cvs  README  README.libqtreemap  README.md  TODO  acconfig.h  acinclude.m4  aclocal.m4  build-howto.html  config.h.in  configure.in.in  k4dirstat.1  kdirstat.kdevprj  kdirstat.lsm  kdirstat.spec  subdirs
.github/workflows/: build.yml
.tx/: config
admin/: Makefile.common  acinclude.m4.in  am_edit  am_edit.py  configure.in.min  cvs.sh  debianrules  ltcf-c.sh  ltcf-cxx.sh  mkinstalldirs
debian/: changelog  control  copyright  get-orig-source.sh  k4dirstat.1  k4dirstat.manpages  rules  watch
doc/: CMakeLists.txt  Makefile.am  index.cache.bz2  index.docbook
doc/en/: .cvsignore  CMakeLists.txt  Makefile.am  index.docbook  template.docbook
doc/en/HTML/: commands.html  configuration.html  faq.html  installation.html  introduction.html  re-1007-unmanagechildren-1.html
doc/treemaps/: Makefile.am  index.html
doc/treemaps/screenshots/: Makefile.am
icons/: CMakeLists.txt  sc-apps-k4dirstat.svgz
kdirstat/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  TODO  cache-file-format.txt  config.h.in  configure.in  configure.in.in  fix-linker-trouble  fix_move_to_trash_bin.pl  kactivitytracker.cpp  kactivitytracker.h  kcleanup.cpp  kcleanup.h  kcleanupcollection.cpp  kcleanupcollection.h  kdirinfo.cpp  kdirinfo.h  kdirreadjob.cpp  kdirsaver.cpp  kdirsaver.h  kdirstat-cache-writer  kdirstat.desktop  kdirstat.lsm  kdirstat.upd  kdirstat_factory.cpp  kdirstat_factory.h  kdirstat_part.cpp  kdirstat_part.h  kdirstat_part.rc  kdirstatapp.cpp  kdirstatapp.h  kdirstatfeedback.cpp  kdirstatmain.cpp  kdirstatsettings.cpp  kdirstatsettings.h  kdirstatui.rc  kdirtree.cpp  (+42 more)
kdirstat/admin/: am_edit  ltcf-c.sh  ltcf-cxx.sh  mkinstalldirs
kdirstat/doc/: Makefile.am  Makefile.in
kdirstat/doc/en/: Makefile.in  index.docbook
kdirstat/doc/en/HTML/: compilation.html  credits.html  developers.html  index.html  requirements.html  using-kdirstat.html
kdirstat/doc/treemaps/: Makefile.in
kdirstat/doc/treemaps/screenshots/: Makefile.in
kdirstat/pics/: Makefile.am  hi16-action-symlink.xcf  hi48-action-symlink.xcf
kdirstat/po/: Makefile.in  kdirstat.pot
kdirstat/templates/: cpp_template  header_template
kdirstat/treemaps/: kdirtreemap.h  kdirtreemaparea.cpp  kdirtreemapwindow.h
old/: kdirstat-2001-05-29.tar.bz2  kdirstat-2001-06-02.tar.bz2  kdirstat-2001-06-11-0330.tar.bz2  kdirstat-2001-06-17.tar.bz2  kdirstat-2001-06-18-1600.tar.bz2  kdirstat-2001-06-21.tar.bz2
patches/: kd8.diff  treemaps-2001-06-14.diff  treemaps-2001-06-16.diff
po/: .cvsignore  CMakeLists.txt  Makefile.am  ca.po  create-pot  de.po  es_AR.po  fr.po  hu.po  it.po  ja.po  k4dirstat.pot  kdirstat.pot  lt.po  lv.po  nl.po
src/: CMakeLists.txt  Messages.sh  k4dirstat.cpp  k4dirstat.desktop  k4dirstat.h  k4dirstat.kcfg  k4dirstatui.qrc  k4dirstatui.rc  k4dirstatview.cpp  k4dirstatview.h  k4dirstatview_base.ui  kactivitytracker.h  kcleanup.cpp  kcleanup.h  kcleanup_dummy.cpp  kcleanupcollection.cpp  kcleanupcollection.h  kcleanupcollection_p.h  kdirinfo.cpp  kdirinfo.h  kdirinfomodel.cpp  kdirinfomodel.h  kdirreadjob.cpp  kdirreadjob.h  kdirsaver.cpp  kdirsaver.h  kdirstatsettings.cpp  kdirstatsettings.h  kdirtree.cpp  kdirtree.h  kdirtreecache.cpp  kdirtreecache.h  kdirtreeiterators.cpp  kdirtreeiterators.h  kdirtreeview.cpp  kdirtreeview.h  kexcluderules.cpp  kexcluderules.h  kfileinfo.cpp  kfileinfo.h  (+12 more)
