# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

AC_CANONICAL_SYSTEM 
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kdirstat, 1.7.6-devel) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

AC_PATH_KDE

dnl Perform program name transformation
AC_ARG_PROGRAM

#MIN_CONFIG

dnl PACKAGE set before

KDE_CHECK_LONG_LONG
KDE_CREATE_SUBDIRSLIST
AC_OUTPUT( \
./Makefile \
doc/Makefile \
doc/en/Makefile \
doc/treemaps/Makefile \
doc/treemaps/screenshots/Makefile \
kdirstat/Makefile \
kdirstat/pics/Makefile \
po/Makefile \
)
